Adjust the code structure